--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Hera Gautadóttir</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="jquery.js"></script>
+        <script src="js.js"></script>
+    </head>
+    <body>
+        <div id ="wrapper">
+            <div id="head">
+                <p>Til Hamingju með afmælið.</p>
+            </div>
+            <div id="text">
+                <p>
+                    <span>Eins og þú munt vita ert þú forritari í framtíðinni </span><br> <span>(við fórum og checkuðum)... </span><br>
+                    <span> Því miður kemst þú ekki hjá þessum örlögum þínum. </span><br> <span>
+                    Til að gera það auðveldara fyrir þig að byrja </span>,<br> <span> ákváðum við að gefa þér vefsíðu! </span><br> <span>
+                    Til að tryggja það að örlögin rætist, </span> <br> <span>þá gerðum við þessa vefsíðu alveg totally awesome
+                    bara fyrir þig. </span><br> <span id ="here">Hérna geturðu séð nokkur einföld dæmi með öllum þeim möguleikum sem
+                            vefsíðuhönnun býður uppá. </span><br>
+                </p>
+            </div>
+            <div id ="hidden">
+                <p>Your way to success starts <a href="http://www.youtube.com/watch?v=cqszz_OfAFQ&list=SPC1322B5A0180C946" target="_blank">
+                    here</a></p>
+            </div>
+        </div>
+    </body>
 </html>
