--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id ="wrapper">
             <div id="head">
-                <p>Velkomin á Heragauta.com</p>
+                <p>Velkomin á Heragauta.com!</p>
             </div>
             <div id="text">
                 <p>
