--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <div id="text">
                 <p>
-                    <span>Eins og þú munt vita ert þú forritari í framtíðinni </span><br> <span>(við fórum og checkuðum)... </span><br>
+                    <span>lalalala Eins og þú munt vita ert þú forritari í framtíðinni </span><br> <span>(við fórum og checkuðum)... </span><br>
                     <span> Því miður kemst þú ekki hjá þessum örlögum þínum. </span><br> <span>
                     Til að gera það auðveldara fyrir þig að byrja </span>,<br> <span> ákváðum við að gefa þér vefsíðu! </span><br> <span>
                     Til að tryggja það að örlögin rætist, </span> <br> <span>þá gerðum við þessa vefsíðu alveg totally awesome
